--- a/public/SCSS/style.scss
+++ b/public/SCSS/style.scss
@@ -1,8 +1,197 @@
-$prime_color: red;
+$prime_color: #BD4C0E;
+$second_color: #FBDD53;
+$element_color: #772E0E;
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+  }
 
 body{
     margin: 0px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
+
+.header-area{
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    width: 100vw;
+    justify-content: center;
+    background-image: linear-gradient(180deg, $second_color, transparent);
+}
+.header-area a{
+    transition: all .5s ease 0s;
+}
+.header-area a:link{
+    text-decoration: none;
+    color: black;
+}
+.header-area .main-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main-nav div{
+  display: flex;
+  justify-content: center;
+}
+.logo{
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: $element_color;
+}
+
+.header-area .nav {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-block: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding: 0px;
+}
+.nav li{
+    list-style-type: none;
+}
+.nav li a:visited{
+    color: $prime_color !important;
+}
+.nav a:hover{
+    font-size: 2rem;
+}
+
+.header-area .main-nav .menu-trigger {
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    top: 33px;
+    width: 32px;
+    height: 40px;
+    text-indent: -9999em;
+    z-index: 99;
+    right: 20px;
+    display: none;
+  }
+.header-area .main-nav .menu-trigger span,
+.header-area .main-nav .menu-trigger span:before,
+.header-area .main-nav .menu-trigger span:after {
+  transition: all 0.4s;
+  background-color: $element_color;
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  left: 0;
+}
+.header-area .main-nav .menu-trigger span:before,
+.header-area .main-nav .menu-trigger span:after {
+  transition: all 0.4s;
+  background-color: $element_color;
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  left: 0;
+  width: 75%;
+}
+
+.header-area .main-nav .menu-trigger span:before,
+.header-area .main-nav .menu-trigger span:after {
+  content: "";
+}
+
+.header-area .main-nav .menu-trigger span {
+  top: 16px;
+}
+
+.header-area .main-nav .menu-trigger span:before {
+  transform-origin: 33%;
+  top: -10px;
+  z-index: 10;
+}
+
+.header-area .main-nav .menu-trigger span:after {
+  transform-origin: 33%;
+  top: 10px;
+}
+
+.header-area .main-nav .menu-trigger.active span,
+.header-area .main-nav .menu-trigger.active span:before,
+.header-area .main-nav .menu-trigger.active span:after {
+  background-color: transparent;
+  width: 100%;
+}
+
+.header-area .main-nav .menu-trigger.active span:before {
+  transform: translateY(6px) translateX(0px) rotate(45deg);
+  background-color: $element_color;
+}
+.header-area .main-nav .menu-trigger.active span::after {
+    transform: translateY(-6px) translateX(0px) rotate(-45deg);
+    background-color: $element_color;
+  }
+.search-bar{
+  display: flex;
+  justify-content: center;
+  border: 1px solid $element_color;
+  border-radius: 100px;
+  padding: 0px;
+}
+.search-bar input{
+  padding-left: 16px;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+}
+
+.search-bar input:focus-visible{
+  outline: none;
+}
+
+.search-bar button{
+ background-color: $prime_color;
+ color: $second_color;
+ border: none;
+ border-radius: 100px;
+ border-top-left-radius: 0px;
+}
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+    .header-area .nav {
+        display: none;
+        text-align: center;
+        margin-block: 0px;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding: 0px;
+    }
+    .header-area .main-nav .menu-trigger {
+        display: block;
+    }
+  }
+
 #action{
     border-radius: 16px;
     color:black;
@@ -10,7 +199,4 @@ body{
     display:flex;
     justify-content:center;
     padding: 8px;
-}
-nav{
-    background-color: aqua;
 }
