--- a/public/SCSS/style.css
+++ b/public/SCSS/style.css
@@ -48,24 +48,37 @@
 
 [class*=col-] {
   float: left;
-  padding: 15px;
+}
+
+* {
+  border: 1px solid red;
 }
 
 body {
+  background-color: #343138;
   margin: 0px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1 {
+  display: inline-flex;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+}
+
 .header-area {
   display: flex;
-  position: fixed;
+  position: sticky;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 100;
   width: 100vw;
   justify-content: center;
-  background-image: linear-gradient(180deg, #FBDD53, transparent);
 }
 
 .header-area a {
@@ -81,6 +94,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0px !important;
+  background-color: #DED68F;
+  border-radius: 50px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 .main-nav div {
@@ -103,7 +121,7 @@ body {
   margin-block: 0px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding: 0px;
+  padding-bottom: 16px;
 }
 
 .nav li {
@@ -220,6 +238,19 @@ body {
   border-top-left-radius: 0px;
 }
 
+.recipe-card {
+  background-color: #FBDD53;
+}
+
+.recipe-card a {
+  display: flex;
+  width: 100%;
+}
+
+.recipe-card img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   [class*=col-] {
@@ -235,6 +266,12 @@ body {
   }
   .header-area .main-nav .menu-trigger {
     display: block;
+  }
+  .search-bar {
+    width: 80vw;
+  }
+  .recipe-card {
+    width: 80vw;
   }
 }
 #action {
