--- a/public/SCSS/style.css
+++ b/public/SCSS/style.css
@@ -48,24 +48,32 @@
 
 [class*=col-] {
   float: left;
-}
-
-* {
-  border: 1px solid red;
+  padding: 8px;
 }
 
 body {
+  overflow-x: hidden;
   background-color: #343138;
   margin: 0px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1 {
+section {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+}
+
+h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
+  color: #FBDD53;
+}
+
+section h1 {
+  margin-left: 16px;
 }
 
 .container {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -77,7 +85,6 @@ h1 {
   position: sticky;
   top: 0;
   z-index: 100;
-  width: 100vw;
   justify-content: center;
 }
 
@@ -94,7 +101,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0px !important;
   background-color: #DED68F;
   border-radius: 50px;
   border-top-left-radius: 0px;
@@ -242,13 +248,68 @@ h1 {
   background-color: #FBDD53;
 }
 
+.recipe-card h3 {
+  color: #772E0E;
+}
+
 .recipe-card a {
   display: flex;
   width: 100%;
+  text-decoration: none;
 }
 
 .recipe-card img {
   width: 100%;
+  height: auto;
+}
+
+#recipe {
+  display: flex;
+  flex-direction: column;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 8px;
+  margin-left: 16px;
+  background-color: #DED68F;
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  margin: 16px;
+  padding: 16px;
+}
+
+.forms div {
+  display: flex;
+  flex-direction: column;
+}
+
+.forms div input {
+  border: 4px solid #DED68F;
+  border-radius: 50px;
+  height: 40px;
+  padding-left: 16px;
+}
+
+.forms label {
+  color: #DED68F;
+  font-size: x-large;
+}
+
+.forms button {
+  font-size: large;
+  border: 4px solid #772E0E;
+  border-radius: 50px;
+  background-color: #DED68F;
+  height: 40px;
+}
+
+input[id=image] {
+  display: flex;
+  color: #FBDD53;
 }
 
 @media only screen and (max-width: 768px) {
@@ -271,6 +332,12 @@ h1 {
     width: 80vw;
   }
   .recipe-card {
+    width: 80vw;
+  }
+  img[class*=col-] {
+    width: 80vw;
+  }
+  .forms {
     width: 80vw;
   }
 }
