--- a/public/SCSS/style.scss
+++ b/public/SCSS/style.scss
@@ -21,25 +21,33 @@ $bg_color4: #6A4839;
 .col-12 {width: 100%;}
 [class*="col-"] {
     float: left;
-    // padding: 15px;
+    padding: 8px;
   }
-*{
-  border: 1px solid red;
-  
-}
+// *{
+//   border: 1px solid red;
+// }
 body{
-    // width: 100vw;
+    overflow-x: hidden;
     background-color: $bg_color1;
     margin: 0px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
+section{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+}
 
-h1{
+h1, h2, h3, h4, h5, h6{
   display: inline-flex;
+  color: $second_color;
+}
+
+section h1{
+  margin-left: 16px;
 }
 
 .container{
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -52,7 +60,6 @@ h1{
     position: sticky;
     top: 0;
     z-index: 100;
-    width: 100vw;
     justify-content: center;
   }
 .header-area a{
@@ -66,7 +73,8 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px !important;
+    // width: 100%;
+    // padding: 0px !important;
     background-color: $bg_color3;
     border-radius: 50px;
     border-top-left-radius: 0px;
@@ -205,13 +213,67 @@ h1{
 .recipe-card{
   background-color: $second_color;
 }
+.recipe-card h3{
+  color: $element_color;
+}
 .recipe-card a{
   display: flex;
   width: 100%;
+  text-decoration: none;
 }
 .recipe-card img{
   width: 100%;
+  height: auto;
 }
+#recipe{
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  padding: 8px;
+  margin-left: 16px;
+  background-color: #DED68F;
+}
+// recipe card style
+
+// forms style
+.forms{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  margin: 16px;
+  padding: 16px;
+}
+
+.forms div{
+  display: flex;
+  flex-direction: column;
+}
+.forms div input{
+  border: 4px solid $bg_color3;
+  border-radius: 50px;
+  height: 40px;
+  padding-left: 16px;
+}
+
+.forms label{
+  color: $bg_color3;
+  font-size: x-large;
+}
+
+.forms button{
+  font-size: large;
+  border: 4px solid $element_color;
+  border-radius: 50px;
+  background-color: $bg_color3;
+  height: 40px;
+}
+
+input[id="image"]{
+  display: flex;
+  color: $second_color;
+}
+
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="col-"] {
@@ -238,6 +300,14 @@ h1{
   // recipe card style
 
   .recipe-card{
+    width: 80vw;
+  }
+  // recipe card style
+
+  img[class*= "col-"]{
+    width: 80vw;
+  }
+  .forms{
     width: 80vw;
   }
   }
