passé la validation

--- a/public/SCSS/style.scss
+++ b/public/SCSS/style.scss
@@ -208,7 +208,9 @@ section h1{
  border-top-left-radius: 0px;
 }
 // header style
-
+.response{
+  color: $second_color;
+}
 // recipe card style
 .recipe-card{
   background-color: $second_color;
