--- a/public/SCSS/style.css
+++ b/public/SCSS/style.css
@@ -244,6 +244,10 @@ section h1 {
   border-top-left-radius: 0px;
 }
 
+.response {
+  color: #FBDD53;
+}
+
 .recipe-card {
   background-color: #FBDD53;
 }
